Added Updater SSH functionality

--- a/data/env.yml
+++ b/data/env.yml
@@ -181,6 +181,7 @@ dependencies:
   - traitlets=5.14.3=py313haa95532_0
   - typing-extensions=4.12.2=py313haa95532_0
   - typing_extensions=4.12.2=py313haa95532_0
+  - tzdata=2025b=h04d1e81_0
   - ujson=5.10.0=py313h5da7b33_1
   - unidecode=1.3.8=py313haa95532_0
   - urllib3=2.3.0=py313haa95532_0
@@ -222,7 +223,6 @@ dependencies:
     - opencv-python==4.11.0.86
     - opencv-python-headless==4.11.0.86
     - packaging==25.0
-    - pandas==2.3.3
     - pillow==11.2.1
     - pyautogui==0.9.54
     - pyclipper==1.3.0.post6
@@ -235,7 +235,6 @@ dependencies:
     - pytesseract==0.3.13
     - python-bidi==0.6.6
     - pytweening==1.2.0
-    - pytz==2025.2
     - pywavelets==1.8.0
     - scikit-image==0.25.2
     - scipy==1.15.3
@@ -244,5 +243,4 @@ dependencies:
     - tifffile==2025.6.11
     - torch==2.7.1
     - torchvision==0.22.1
-    - tzdata==2025.3
 prefix: C:\Users\Arthur\anaconda3\envs\RaidEnv
